k8s/client-srv-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-srv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client-srv
  template:
    metadata:
      labels:
        app: client-srv
    spec:
      imagePullSecrets:
        - name: regcred  
      containers:
      - name: client-srv
        image: localhost:5001/micro_service/client
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
