k8s/comments-srv-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-srv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments-srv
  template:
    metadata:
      labels:
        app: comments-srv
    spec:
      imagePullSecrets:
        - name: regcred  
      containers:
      - name: comments-srv
        image: localhost:5005/micro_service/comments
        imagePullPolicy: Always
        ports:
        - containerPort: 4001
