k8s/event-bus-srv-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-srv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-bus-srv
  template:
    metadata:
      labels:
        app: event-bus-srv
    spec:
      imagePullSecrets:
        - name: regcred  
      containers:
      - name: event-bus-srv
        image: localhost:5001/micro_service/event-bus
        imagePullPolicy: Always
        ports:
        - containerPort: 4005
