k8s/posts-clusterip-srv-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-clusterip-srv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts-clusterip-srv
  template:
    metadata:
      labels:
        app: posts-clusterip-srv
    spec:
      imagePullSecrets:
        - name: regcred 
      containers:
      - name: posts-clusterip-srv
        image: localhost:5000/micro_service/posts
        imagePullPolicy: Always
        ports:
        - containerPort: 4000
