k8s/query-srv-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-srv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query-srv
  template:
    metadata:
      labels:
        app: query-srv
    spec:
      imagePullSecrets:
        - name: regcred  
      containers:
      - name: query-srv
        image: localhost:5000/micro_service/query
        imagePullPolicy: Always
        ports:
        - containerPort: 4002
