k8s/event-bus-srv-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: event-bus-srv
spec:
  selector:
    app: event-bus-srv
  ports:
    - protocol: TCP
      port: 4005
      targetPort: 4005
  type: ClusterIP
