k8s/moderation-srv-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: moderation-srv
spec:
  selector:
    app: moderation-srv
  ports:
    - protocol: TCP
      port: 4003
      targetPort: 4003
  type: ClusterIP
