k8s/posts-clusterip-srv-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip-srv
spec:
  selector:
    app: posts-clusterip-srv
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
  type: ClusterIP
