k8s/posts-srv-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-srv
spec:
  selector:
    app: posts-srv
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
  type: ClusterIP
