k8s/registry-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry-service
spec:
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: registry
